--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="bgYourApp">#47B7B8</color>
     <color name="warnYourApp">#225A5A</color>
     <color name="ypusername">#747C79</color>
+
+    <!-- Home App -->
 </resources>
